--- a/stable/man/defaults.html
+++ b/stable/man/defaults.html
@@ -24,7 +24,7 @@
   :yticks       =&gt; &quot;NoTicks&quot;
   :ticks        =&gt; &quot;NoTicks&quot;
   :ignoreaspect =&gt; false
-  :width        =&gt; 350
+  :width        =&gt; 512
   :bgcolor      =&gt; NamedColor(&quot;white&quot;,(1.0, 1.0, 1.0))
   :border       =&gt; 3
   :pdf          =&gt; true</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_PLOT3D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 21 entries:
@@ -47,19 +47,21 @@
   :arrow        =&gt; Arrow3()
   :camera       =&gt; nothing
   :projection   =&gt; &quot;perspective&quot;
-  :width        =&gt; 350
+  :width        =&gt; 512
   :ignoreaspect =&gt; false</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_POINT2D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 2 entries:
   :label =&gt; &quot;&quot;
   :pen   =&gt; Pen()</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_PATH2D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 4 entries:
   :label  =&gt; &quot;&quot;
   :pen    =&gt; Pen()
   :arrow  =&gt; NoArrow()
-  :spline =&gt; false</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_CIRCLE2D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,AsyPlots.Pen} with 2 entries:
-  :pen     =&gt; Pen()
-  :fillpen =&gt; Pen(other=NoPen)</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_POLYGON2D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 3 entries:
+  :spline =&gt; false</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_CIRCLE2D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 3 entries:
   :pen     =&gt; Pen()
   :fillpen =&gt; Pen(other=NoPen)
-  :spline  =&gt; false</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_POINT3D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 2 entries:
+  :clip    =&gt; false</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_POLYGON2D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 4 entries:
+  :pen     =&gt; Pen()
+  :fillpen =&gt; Pen(other=NoPen)
+  :spline  =&gt; false
+  :clip    =&gt; false</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_POINT3D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 2 entries:
   :label =&gt; &quot;&quot;
   :pen   =&gt; Pen()</code></pre></div><div><pre><code class="language-julia">AsyPlots._DEFAULT_PATH3D_KWARGS</code></pre><pre><code class="language-none">DataStructures.OrderedDict{Symbol,Any} with 4 entries:
   :label  =&gt; &quot;&quot;
